<resources>
    <string name="app_name">豆豆菜谱</string>
    <string name="firstname">好豆</string>
    <string name="homename">到家</string>
    <string name="squarename">广场</string>
    <string name="minename">我的</string>
    <string name="squar_ename">广场</string>
    <string name="draft">草稿</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="recipe">菜谱</string>
    <string name="zero">0</string>
    <string name="topic">话题</string>
    <string name="photo">相册</string>
    <string name="order">我的订单</string>
    <string name="allorder">查看全部订单</string>
    <string name="order_unpaid">待付款</string>
    <string name="order_undelivery">待发货</string>
    <string name="order_goodsreceived">待收货</string>
    <string name="to_review">待评价</string>
    <string name="order_refunds">退款</string>
    <string name="suggestion">意见反馈</string>
    <string name="homeLogo">到家</string>
    <string name="address">[北京]</string>
    <string name="classify">全部</string>
    <string name="search_commodity">搜索商品</string>
    <string name="haodoutitle">流行食谱</string>
    <string name="dinner">周四。晚餐</string>
    <string name="dinnereat">周四晚上这样吃</string>
    <string name="hinttext">菜谱、专辑、豆友</string>
    <string name="cate">美食研究所</string>
    <string name="squee">广场</string>
    <string name="searchtopic">话题搜索</string>
    <string name="huati">话题</string>
    <string name="doufriend">豆友</string>
    <string name="dynamic">动态</string>
    <string name="newproduct">精品推荐</string>
    <string name="startstore">明星店铺</string>
    <string name="photoname">word天~粉粉的它居然是粑粑</string>
    <string name="password">请输入密码</string>
    <string name="pwd">密码：</string>
    <string name="name">账号：</string>
    <string name="phonenum">请输入密码</string>
    <string name="circleinstruction">萝卜的最佳吃法都在这里。。</string>
    <string name="openurl">立即购买</string>
    <string name="examine">[品鉴]</string>
    <string name="menu_edit">编辑</string>
    <string name="menu_enter">完成</string>
    <string name="menu_del">删除</string>
    <string name="menu_sett">结算</string>
    <string name="kitchentitle">秋冬季巧食坚果强身健体更驱寒</string>
    <string name="kitchenname">幸福的林冰</string>
    <string name="titlecontent">咸香下饭，美味湘菜——香</string>
    <string name="titlecount">1</string>
    <string name="enter_num">请输入邮箱或手机号码</string>
    <string name="forgetpwd">忘记密码？</string>
    <string name="feedback">意见反馈</string>
    <string name="finish">完成</string>
    <string name="opinion">亲，希望能留下您的联系方式，若您的意见被采纳，我们会赠送精美礼物一份哦！</string>
    <string name="num">客服电话：</string>
    <string name="view_history">查看历史记录</string>
    <string name="haodoulogin">好豆登录</string>
    <string name="photodinner">11月21日 晚餐</string>
    <string name="hottitle">麻婆肉末白菜</string>
    <string name="sort">分类</string>
    <string name="sales">销量</string>
    <string name="price">价格</string>
    <string name="newProduct">新品</string>
    <string name="Price">价格</string>
    <string name="menugv">瘦身</string>
    <string name="vediohinttext">搜索视频</string>
    <string name="hotname">紫薯香蕉卷</string>
    <string name="category">饮品</string>
    <string name="enter_registnum">请输入要注册的手机号</string>
    <string name="next">下一步</string>
    <string name="goto_login">已有好豆账号，点击登录</string>
    <string name="code">请输入验证码</string>
    <string name="enter_code">请输入手机验证码</string>
    <string name="enter_nickname">昵称限汉字、字母、数字、下划线</string>
    <string name="enter_setpwd">密码不少于6位，限字母和数字</string>
    <string name="time">2015-9-13 20:50</string>
    <string name="zan">111111</string>
    <string name="comment">2222</string>
    <string name="hotrank">热门菜谱</string>
    <string name="rankcount">111111</string>
    <string name="productcraft">产品工艺</string>
    <string name="evaluate">评价</string>
    <string name="mydynamic">我的动态</string>
    <string name="total">合计</string>
    <string name="hotclass">热门分类</string>
    <string-array name="hottitlename">
        <item>全部</item>
        <item>私人</item>
        <item>时令</item>
        <item>达人</item>
        <item>最新</item>
        <item>烘焙</item>
    </string-array>
</resources>
