<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yjlw.ddms.mainactivity.MainActivity">
    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/common_white"
        />
    <RadioGroup
        android:id="@+id/rg_group"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/tab_bg_color"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_bean"
            style="@style/BottomTabStyle"
            android:drawableTop="@drawable/haodou_selector"
            android:text="@string/firstname"
            android:checked="true"
            android:textColor="@drawable/selector_text"
            />

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/BottomTabStyle"
            android:drawableTop="@drawable/home_selector"
            android:text="@string/homename"
            android:textColor="@drawable/selector_text"
            />

        <RadioButton
            android:id="@+id/rb_square"
            style="@style/BottomTabStyle"
            android:drawableTop="@drawable/square_selector"
            android:text="@string/squarename"
            />

        <RadioButton
            android:id="@+id/rb_mine"
            style="@style/BottomTabStyle"
            android:drawableTop="@drawable/mine_selector"
            android:text="@string/minename"
            />
    </RadioGroup>
</LinearLayout>
