<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_guide"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/wheel_line_bg_color"
                android:textSize="20sp"
                android:text="@string/squee"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/edittextshape"
                android:drawableLeft="@mipmap/btn_header_searchbtn"
                android:hint="@string/searchtopic"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/btn_header_edit"/>
        </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_topic_id"
            style="@style/myselfStyle"
            android:drawableLeft="@drawable/topic_selector"
            android:checked="true"
            android:paddingLeft="45dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/huati" />

        <RadioButton
            android:id="@+id/rb_doufriend_id"
            style="@style/myselfStyle"
            android:drawableLeft="@drawable/poeple_selector"
            android:paddingLeft="45dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/doufriend" />

        <RadioButton
            android:id="@+id/rb_dynamic_id"
            style="@style/myselfStyle"
            android:drawableLeft="@drawable/class_activity_selector"
            android:paddingLeft="45dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/dynamic" />

    </RadioGroup>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_id"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
