<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home_label"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/status_text"
    android:orientation="vertical"
    tools:context="com.yjlw.ddms.homeentity.activity.HomeLabelActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/tab_bg_color">

    </android.support.v7.widget.Toolbar>
    <!--定位-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"/>

        <ImageView
            android:id="@+id/iv_drown_address"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="0.5"
            android:src="@mipmap/btn_weaken_arrowdown_orange"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/tab_bg_color"/>

        <Spinner
            android:id="@+id/sp_classify"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/tab_bg_color"/>
    <!--选择-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        >

        <RadioGroup
            android:id="@+id/rg_home_group"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_product_mold"
                style="@style/home_left_product_style"
                />

            <RadioButton
                android:id="@+id/rb_home_sales"
                style="@style/home_product_style"
                android:layout_marginLeft="35dp"
                android:drawablePadding="5dp"
                android:text="@string/sales"/>

            <RadioButton
                android:id="@+id/rb_home_price"
                style="@style/home_product_style"
                android:layout_marginLeft="35dp"
                android:text="@string/Price"/>

        </RadioGroup>

        <RadioButton
            android:id="@+id/rb_home_new_product"
            style="@style/right_home_product_style"
            android:text="@string/newProduct"/>

    </LinearLayout>

    <ListView
        android:id="@+id/lv_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:scrollbars="none"
        />
</LinearLayout>
